--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     
-		<link rel="modulepreload" href="./_app/immutable/entry/start.6098d473.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.fda821c9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.e108d1fd.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.13ea4aeb.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.6a9e7d3e.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.b9933a51.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.46ea89e8.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.a36d3d5f.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.5410f499.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.0719bd3d.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.a4d6fcb2.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.e42c09af.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.b8c0d80a.js">
   </head>
   <body>
     <div>  <h1 data-svelte-h="svelte-1bj4n12">sveltekit-gh-pages</h1> <p data-svelte-h="svelte-lmr5fu">Deployed to GitHub Pages</p> <p data-svelte-h="svelte-1vc1ga9">Visit <a href="https://kit.svelte.dev">kit.svelte.dev</a> to read the documentation</p> <a href="/about" data-svelte-h="svelte-2hnrj4">About</a> 
 			
 			<script>
 				{
-					__sveltekit_tjydb2 = {
+					__sveltekit_6c78gr = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -28,8 +28,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.6098d473.js"),
-						import("./_app/immutable/entry/app.b9933a51.js")
+						import("./_app/immutable/entry/start.fda821c9.js"),
+						import("./_app/immutable/entry/app.5410f499.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
