--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link rel="modulepreload" href="./_app/immutable/entry/start.be8546bd.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.15edbe71.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.6dba6488.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.b33233ef.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.0523f208.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.a4867c29.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.8c47fbe7.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.6e67e459.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.e2e5b069.js">
 	</head>
@@ -43,7 +43,7 @@
 			
 			<script>
 				{
-					__sveltekit_2grj6c = {
+					__sveltekit_1yro568 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -53,8 +53,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.be8546bd.js"),
-						import("./_app/immutable/entry/app.0523f208.js")
+						import("./_app/immutable/entry/start.15edbe71.js"),
+						import("./_app/immutable/entry/app.8c47fbe7.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
