--- a/index.html
+++ b/index.html
@@ -5,45 +5,26 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link rel="modulepreload" href="./_app/immutable/entry/start.15edbe71.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.fead755a.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.6dba6488.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.a4867c29.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.8c47fbe7.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.8d3d44eb.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.637687e9.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.6e67e459.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.e2e5b069.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.20805031.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 
 
-<h1>Welcome to SvelteKit + GitHub Pages</h1>
+<h1>Welcome HC15Alliance</h1>
 
-<p>It is super easy to publish SvelteKit project on GitHub Pages. Create a GitHub repo before starting this.
-</p>
-
-<ul><li>Install SvelteKit
-  </li>
-  <li>Install @sveltejs/adapter-static and gh-pages. `npm i -D @sveltejs/adapter-static gh-pages`
-  </li>
-  <li>Update svelte.config.js by changing adapter-auto to adaptor-static.
-   `import adapter from &#39;@sveltejs/adapter-static&#39;;`
-  </li>
-  <li>Add the following to `src/routes/+layout.js`
-    `export const prerender = true;`
-  </li>
-  <li>Add a script to package.json. `&quot;gh-pages&quot;: &quot;npm run build &amp;&amp; npx gh-pages -d build&quot;`
-  </li>
-  <li>If you are using a postcss such as Tailwind css, you need to add an empty .nojekyll file to the gh-pages branch.
-  </li></ul>
-
-<p>Now you just need to run `npm run gh-pages`.
-</p>
+<p>Coming soon...</p>
 
 
 			
 			<script>
 				{
-					__sveltekit_1yro568 = {
+					__sveltekit_1vs6vui = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -53,8 +34,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.15edbe71.js"),
-						import("./_app/immutable/entry/app.8c47fbe7.js")
+						import("./_app/immutable/entry/start.fead755a.js"),
+						import("./_app/immutable/entry/app.637687e9.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
