--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link rel="modulepreload" href="./_app/immutable/entry/start.fead755a.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.1f636808.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.6dba6488.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.8d3d44eb.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.637687e9.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.40f550b2.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.6b29852d.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.6e67e459.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.20805031.js">
 	</head>
@@ -24,7 +24,7 @@
 			
 			<script>
 				{
-					__sveltekit_1vs6vui = {
+					__sveltekit_ds97df = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -34,8 +34,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.fead755a.js"),
-						import("./_app/immutable/entry/app.637687e9.js")
+						import("./_app/immutable/entry/start.1f636808.js"),
+						import("./_app/immutable/entry/app.6b29852d.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
