--- a/index.html
+++ b/index.html
@@ -5,26 +5,31 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link rel="modulepreload" href="./_app/immutable/entry/start.1f636808.js">
+		<link href="./_app/immutable/assets/app.95113351.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/2.281d53bb.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.4a09b51b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.6dba6488.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.40f550b2.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.6b29852d.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.6e67e459.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.20805031.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.75cbf47f.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.0b67c92e.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.aa0d176c.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.e394b6c1.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 
 
-<h1>Welcome HC15Alliance</h1>
+<div class="app svelte-w7ugky"><h1 class="text-3xl font-bold text-center m-4 md:m-6">Welcome HC15Alliance</h1>
 
-<p>Coming soon...</p>
+	<main class="svelte-w7ugky"></main>
+
+	<footer class="svelte-w7ugky"><p>visit <a href="https://kit.svelte.dev" class="svelte-w7ugky">kit.svelte.dev</a> to learn SvelteKit</p></footer>
+</div>
 
 
 			
 			<script>
 				{
-					__sveltekit_ds97df = {
+					__sveltekit_6jddti = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -34,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.1f636808.js"),
-						import("./_app/immutable/entry/app.6b29852d.js")
+						import("./_app/immutable/entry/start.4a09b51b.js"),
+						import("./_app/immutable/entry/app.0b67c92e.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
