--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		
 		<link href="./_app/immutable/assets/app.95113351.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.281d53bb.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.4a09b51b.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.337babec.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.6dba6488.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.75cbf47f.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.0b67c92e.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.7128b5f2.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.3996afff.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.aa0d176c.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.e394b6c1.js">
 	</head>
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_6jddti = {
+					__sveltekit_3nvlck = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.4a09b51b.js"),
-						import("./_app/immutable/entry/app.0b67c92e.js")
+						import("./_app/immutable/entry/start.337babec.js"),
+						import("./_app/immutable/entry/app.3996afff.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
