--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		
 		<link href="./_app/immutable/assets/app.95113351.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.281d53bb.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.7d838ac4.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.3a5d4720.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.6dba6488.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.1d360e5d.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.2bcd150f.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.17a2180d.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.38a63750.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.aa0d176c.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.e394b6c1.js">
 	</head>
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_19jhfay = {
+					__sveltekit_2bzxga = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.7d838ac4.js"),
-						import("./_app/immutable/entry/app.2bcd150f.js")
+						import("./_app/immutable/entry/start.3a5d4720.js"),
+						import("./_app/immutable/entry/app.38a63750.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
