--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="./_app/immutable/assets/app.95113351.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/app.f9efa4a4.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.281d53bb.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.3a5d4720.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.49130561.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.6dba6488.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.17a2180d.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.38a63750.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.aa0d176c.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.e394b6c1.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.3b4a5e44.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.1e259cfa.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.f3547393.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.d1ba1ca4.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_2bzxga = {
+					__sveltekit_1o95fdj = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.3a5d4720.js"),
-						import("./_app/immutable/entry/app.38a63750.js")
+						import("./_app/immutable/entry/start.49130561.js"),
+						import("./_app/immutable/entry/app.1e259cfa.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
