--- a/index.html
+++ b/index.html
@@ -5,31 +5,31 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="./_app/immutable/assets/app.95113351.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/2.281d53bb.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.fef89cfa.js">
+		<link href="./_app/immutable/assets/app.de605cf7.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/2.856855cc.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.17b8eacf.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.6dba6488.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.1f9454ff.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.2fdd6a8e.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.aa0d176c.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.e394b6c1.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.81b40a6b.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.d225f2ca.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.bdfe6295.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.dae4bb6b.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 
 
-<div class="app svelte-w7ugky"><h1 class="text-3xl font-bold text-center m-4 md:m-6">Welcome HC15Alliance</h1>
+<div class="app"><h1 class="text-3xl font-bold text-center m-4 md:m-6">Welcome HC15Alliance 🌼</h1>
 
-	<main class="svelte-w7ugky"></main>
+	<main></main>
 
-	<footer class="svelte-w7ugky"><p>visit <a href="https://kit.svelte.dev" class="svelte-w7ugky">kit.svelte.dev</a> to learn SvelteKit</p></footer>
+	<footer><p>visit <a href="https://kit.svelte.dev">kit.svelte.dev</a> to learn SvelteKit</p></footer>
 </div>
 
 
 			
 			<script>
 				{
-					__sveltekit_1bmcx6f = {
+					__sveltekit_bm2pzs = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.fef89cfa.js"),
-						import("./_app/immutable/entry/app.2fdd6a8e.js")
+						import("./_app/immutable/entry/start.17b8eacf.js"),
+						import("./_app/immutable/entry/app.d225f2ca.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
