--- a/index.html
+++ b/index.html
@@ -5,31 +5,33 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="./_app/immutable/assets/app.de605cf7.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/2.856855cc.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.17b8eacf.js">
+		<link href="./_app/immutable/assets/app.118708f2.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/2.08731881.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.9ab94c92.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.6dba6488.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.81b40a6b.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.d225f2ca.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.bdfe6295.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.dae4bb6b.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.a2436578.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.cd6182b7.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.2e1b9c8c.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.73464909.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 
 
-<div class="app"><h1 class="text-3xl font-bold text-center m-4 md:m-6">Welcome HC15Alliance 🌼</h1>
+<div class="app">
 
-	<main></main>
+	<main class="flex items-center justify-center h-screen"><div><h1 class="text-8xl tracking-wide text-orange-900 mb-4">HC15 Alliance</h1>
+      <p class="text-2xl">We are HC15 - a collaborative alliance of entrepreneurs</p></div>
+		</main>
 
-	<footer><p>visit <a href="https://kit.svelte.dev">kit.svelte.dev</a> to learn SvelteKit</p></footer>
+	<footer><p>© 2023 HC15Alliance - Coming soon...</p></footer>
 </div>
 
 
 			
 			<script>
 				{
-					__sveltekit_bm2pzs = {
+					__sveltekit_kvqkop = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -39,8 +41,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.17b8eacf.js"),
-						import("./_app/immutable/entry/app.d225f2ca.js")
+						import("./_app/immutable/entry/start.9ab94c92.js"),
+						import("./_app/immutable/entry/app.cd6182b7.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
