--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="./_app/immutable/assets/app.118708f2.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/app.ed0a3fbf.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.08731881.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.9ab94c92.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.e4312fc5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.6dba6488.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.a2436578.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.cd6182b7.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.2e1b9c8c.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.73464909.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.fffb2d8d.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.62c3a42e.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.e997cfa2.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.d0a00267.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -20,18 +20,18 @@
 
 <div class="app">
 
-	<main class="flex items-center justify-center h-screen"><div><h1 class="text-8xl tracking-wide text-orange-900 mb-4">HC15 Alliance</h1>
-      <p class="text-2xl">We are HC15 - a collaborative alliance of entrepreneurs</p></div>
+	<main class="flex items-center justify-center h-screen"><div class="text-center"><h1 class="text-6xl lg:text-8xl tracking-wide text-orange-900 mb-4">HC15 Alliance</h1>
+      <p class="lg:text-2xl">We are HC15 - a collaborative alliance of entrepreneurs</p></div>
 		</main>
 
-	<footer><p>© 2023 HC15Alliance - Coming soon...</p></footer>
+	<footer><p class="text-sm">© 2023 HC15Alliance - Coming soon...</p></footer>
 </div>
 
 
 			
 			<script>
 				{
-					__sveltekit_kvqkop = {
+					__sveltekit_jcntlh = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -41,8 +41,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.9ab94c92.js"),
-						import("./_app/immutable/entry/app.cd6182b7.js")
+						import("./_app/immutable/entry/start.e4312fc5.js"),
+						import("./_app/immutable/entry/app.62c3a42e.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
