--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="./_app/immutable/assets/app.ed0a3fbf.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/2.08731881.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.e4312fc5.js">
+		<link href="./_app/immutable/assets/2.8476fb9d.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.c2c9472d.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.6dba6488.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.fffb2d8d.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.62c3a42e.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.01530138.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.1c6ce592.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.e997cfa2.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.d0a00267.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.605d9854.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -31,7 +31,7 @@
 			
 			<script>
 				{
-					__sveltekit_jcntlh = {
+					__sveltekit_1w7bcog = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -41,8 +41,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.e4312fc5.js"),
-						import("./_app/immutable/entry/app.62c3a42e.js")
+						import("./_app/immutable/entry/start.c2c9472d.js"),
+						import("./_app/immutable/entry/app.1c6ce592.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
