--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		
 		<link href="./_app/immutable/assets/app.ed0a3fbf.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.8476fb9d.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.c2c9472d.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.4ee840a6.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.6dba6488.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.01530138.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.1c6ce592.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.4403be4a.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.5e682b14.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.e997cfa2.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.605d9854.js">
 	</head>
@@ -31,7 +31,7 @@
 			
 			<script>
 				{
-					__sveltekit_1w7bcog = {
+					__sveltekit_n8psuy = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -41,8 +41,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.c2c9472d.js"),
-						import("./_app/immutable/entry/app.1c6ce592.js")
+						import("./_app/immutable/entry/start.4ee840a6.js"),
+						import("./_app/immutable/entry/app.5e682b14.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
