--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.bdcababc.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/app.ead725d5.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.dbbce574.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.c6cf2e14.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
+		<link rel="modulepreload" href="./_app/immutable/nodes/5.76a737e7.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -25,13 +25,8 @@
 				<a href="/alliance" class="hover:text-emerald-600 ml-4 uppercase tracking-wide">Our Alliance</a>
 				<a href="/portfolio" class="hover:text-emerald-600 ml-4 uppercase tracking-wide">Our Portfolio</a></div></nav></header>
 
-	<div class="flex flex-col min-h-screen"><main><div class="home-fx frame overflow-hidden bg-[#e9e9e1]"><div class="flex items-center justify-center w-full min-h-screen relative"><div class="px-4 md:text-center"><h1 class="text-6xl md:text-7xl lg:text-9xl tracking-wide text-cyan-950 mb-4">HC15 Alliance</h1>
-          <p class="md:text-3xl lg:text-4xl text-slate-600 italic font-medium">We are HC15 - a collaborative alliance of entrepreneurs</p>
-          <p class="my-4 md:py-6 lg:my-9"><a href="/co-creation" class="p-4 md:px-6 bg-gradient-to-r from-cyan-950 to-cyan-800 rounded-full text-white hover:bg-gradient-to-r hover:from-orange-950 hover:to-emerald-800 worksans uppercase tracking-wide">Learn more</a></p></div></div>
-
-      <div class="cursor" data-custom-colors="#315D93,#817c52,#dacfc3,#fca806, #f27984" data-ttl="0.8"><div class="cursor__inner"></div></div></div></main>
-  <footer class="fixed w-full text-center z-50 bottom-0 flex flex-col justify-center p-4"><p class="text-sm text-slate-500">© 2023 HC15Alliance</p></footer>
-</div></div>
+	<section class="px-4 pt-20 max-w-4xl mx-auto"><h1 class="md:text-center text-6xl md:text-7xl lg:text-9xl tracking-wide text-cyan-950 mt-9 mb-4 lg:mt-16 lg:mb-11">Our Portfolio</h1>
+</section></div>
 
 
 			
@@ -51,7 +46,7 @@
 						import("./_app/immutable/entry/app.ead725d5.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
-							node_ids: [0, 2],
+							node_ids: [0, 5],
 							data,
 							form: null,
 							error: null
