--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="./_app/immutable/assets/0.a11014fb.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.4851fa39.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.59cf271e.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.bdcababc.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.ead725d5.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.dbbce574.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.c6cf2e14.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
+		<link href="./_app/immutable/assets/0.3c3450cd.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.71529543.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.2ed5b141.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.c6520ec4.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.d63fd9d9.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.cebe3039.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.52942bc9.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -19,25 +19,26 @@
 
 
 
-<div id="isMain" class="loading"><header class="p-4 md:p-6 fixed bg-[#e9e9e1] w-full z-50"><nav class="flex justify-center">
-			<div class="self-center lg:ml-6"><a href="/" class="hover:text-emerald-600"><i class="fa-sharp fa-regular fa-house-heart"></i></a>
-				<a href="/why" class="hover:text-emerald-600 ml-4 uppercase tracking-wide">Our Why</a>
-				<a href="/alliance" class="hover:text-emerald-600 ml-4 uppercase tracking-wide">Our Alliance</a>
-				<a href="/portfolio" class="hover:text-emerald-600 ml-4 uppercase tracking-wide">Our Portfolio</a></div></nav></header>
+<div id="isMain" class="loading"><header class="px-4 py-2 md:px-6 fixed bg-[#e9e9e1] w-full z-50 shadow-sm"><nav class="flex lg:justify-center"><div class="self-center lg:ml-6 flex justify-between w-full lg:inline-block lg:w-auto menunav--hidden" id="menunav"><a href="/" class="hover:text-[#817c52] w-11 h-11 inline-block leading-[44px] text-center rounded-full bg-[#d6d6c2] lg:bg-[#e9e9e1]"><i class="fa-sharp fa-regular fa-house-heart text-lg"></i></a>
+			<div class="bg-[#e9e9e1] lg:inline-block menunav__target"><a href="/why" class="border-t border-[#d6d6c2] px-4 py-2 hover:text-[#817c52] uppercase tracking-wide lg:border-0">Our Why</a>
+				<a href="/alliance" class="border-t border-[#d6d6c2] px-4 py-2 hover:text-[#817c52] uppercase tracking-wide lg:border-0">Our Alliance</a>
+				<a href="/portfolio" class="border-t border-[#d6d6c2] px-4 py-2 hover:text-[#817c52] uppercase tracking-wide lg:border-0">Our Portfolio</a></div>
+			<button class="lg:hidden w-11 h-11 inline-block leading-[46px] text-center rounded-full bg-[#d6d6c2] float-right"><i class="fa-light fa-bars text-lg block mx-auto"></i>
+				<i class="fa-light fa-xmark text-lg block mx-auto"></i></button></div></nav></header>
 
-	<div class="flex flex-col min-h-screen"><main><div class="home-fx frame overflow-hidden bg-[#e9e9e1]"><div class="flex items-center justify-center w-full min-h-screen relative"><div class="px-4 md:text-center"><h1 class="text-6xl md:text-7xl lg:text-9xl tracking-wide text-cyan-950 mb-4">HC15 Alliance</h1>
+	<section class="content"><div class="flex flex-col min-h-screen"><main><div class="home-fx frame overflow-hidden bg-[#e9e9e1]"><div class="flex items-center justify-center w-full min-h-screen relative"><div class="px-4 md:text-center"><h1 class="text-6xl md:text-7xl lg:text-9xl tracking-wide text-cyan-950 mb-4">HC15 Alliance</h1>
           <p class="md:text-3xl lg:text-4xl text-slate-600 italic font-medium">We are HC15 - a collaborative alliance of entrepreneurs</p>
-          <p class="my-4 md:py-6 lg:my-9"><a href="/co-creation" class="p-4 md:px-6 bg-gradient-to-r from-cyan-950 to-cyan-800 rounded-full text-white hover:bg-gradient-to-r hover:from-orange-950 hover:to-emerald-800 worksans uppercase tracking-wide">Learn more</a></p></div></div>
+          <p class="my-4 md:py-6 lg:my-9"><a href="/co-creation" class="button">Learn more</a></p></div></div>
 
       <div class="cursor" data-custom-colors="#315D93,#817c52,#dacfc3,#fca806, #f27984" data-ttl="0.8"><div class="cursor__inner"></div></div></div></main>
   <footer class="fixed w-full text-center z-50 bottom-0 flex flex-col justify-center p-4"><p class="text-sm text-slate-500">© 2023 HC15Alliance</p></footer>
-</div></div>
+</div></section></div>
 
 
 			
 			<script>
 				{
-					__sveltekit_yfehx9 = {
+					__sveltekit_13byn0c = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -47,8 +48,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.4851fa39.js"),
-						import("./_app/immutable/entry/app.ead725d5.js")
+						import("./_app/immutable/entry/start.71529543.js"),
+						import("./_app/immutable/entry/app.d63fd9d9.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
