--- a/portfolio.html
+++ b/portfolio.html
@@ -5,13 +5,13 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="./_app/immutable/assets/0.a11014fb.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.4851fa39.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.59cf271e.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.bdcababc.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.ead725d5.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.dbbce574.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/5.76a737e7.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
+		<link href="./_app/immutable/assets/0.3c3450cd.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.71529543.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.2ed5b141.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.c6520ec4.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.d63fd9d9.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.cebe3039.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/5.470a1b32.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -19,20 +19,21 @@
 
 
 
-<div id="isMain" class="loading"><header class="p-4 md:p-6 fixed bg-[#e9e9e1] w-full z-50"><nav class="flex justify-center">
-			<div class="self-center lg:ml-6"><a href="/" class="hover:text-emerald-600"><i class="fa-sharp fa-regular fa-house-heart"></i></a>
-				<a href="/why" class="hover:text-emerald-600 ml-4 uppercase tracking-wide">Our Why</a>
-				<a href="/alliance" class="hover:text-emerald-600 ml-4 uppercase tracking-wide">Our Alliance</a>
-				<a href="/portfolio" class="hover:text-emerald-600 ml-4 uppercase tracking-wide">Our Portfolio</a></div></nav></header>
+<div id="isMain" class="loading"><header class="px-4 py-2 md:px-6 fixed bg-[#e9e9e1] w-full z-50 shadow-sm"><nav class="flex lg:justify-center"><div class="self-center lg:ml-6 flex justify-between w-full lg:inline-block lg:w-auto menunav--hidden" id="menunav"><a href="/" class="hover:text-[#817c52] w-11 h-11 inline-block leading-[44px] text-center rounded-full bg-[#d6d6c2] lg:bg-[#e9e9e1]"><i class="fa-sharp fa-regular fa-house-heart text-lg"></i></a>
+			<div class="bg-[#e9e9e1] lg:inline-block menunav__target"><a href="/why" class="border-t border-[#d6d6c2] px-4 py-2 hover:text-[#817c52] uppercase tracking-wide lg:border-0">Our Why</a>
+				<a href="/alliance" class="border-t border-[#d6d6c2] px-4 py-2 hover:text-[#817c52] uppercase tracking-wide lg:border-0">Our Alliance</a>
+				<a href="/portfolio" class="border-t border-[#d6d6c2] px-4 py-2 hover:text-[#817c52] uppercase tracking-wide lg:border-0">Our Portfolio</a></div>
+			<button class="lg:hidden w-11 h-11 inline-block leading-[46px] text-center rounded-full bg-[#d6d6c2] float-right"><i class="fa-light fa-bars text-lg block mx-auto"></i>
+				<i class="fa-light fa-xmark text-lg block mx-auto"></i></button></div></nav></header>
 
-	<section class="px-4 pt-20 max-w-4xl mx-auto"><h1 class="md:text-center text-6xl md:text-7xl lg:text-9xl tracking-wide text-cyan-950 mt-9 mb-4 lg:mt-16 lg:mb-11">Our Portfolio</h1>
-</section></div>
+	<section class="content"><article class="px-4 pt-20 max-w-4xl mx-auto"><h1 class="md:text-center text-6xl md:text-7xl lg:text-9xl tracking-wide text-cyan-950 mt-9 mb-4 lg:mt-16 lg:mb-11">Our Portfolio</h1>
+</article></section></div>
 
 
 			
 			<script>
 				{
-					__sveltekit_yfehx9 = {
+					__sveltekit_13byn0c = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -42,8 +43,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.4851fa39.js"),
-						import("./_app/immutable/entry/app.ead725d5.js")
+						import("./_app/immutable/entry/start.71529543.js"),
+						import("./_app/immutable/entry/app.d63fd9d9.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 5],
