--- a/team/shan.html
+++ b/team/shan.html
@@ -5,13 +5,14 @@
 		<link rel="icon" href="../favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="../_app/immutable/assets/0.a11014fb.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.4851fa39.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/index.59cf271e.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.bdcababc.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.ead725d5.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.dbbce574.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/15.3cc7ba15.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
+		<link href="../_app/immutable/assets/0.3c3450cd.css" rel="stylesheet">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.71529543.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/index.2ed5b141.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.c6520ec4.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.d63fd9d9.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.cebe3039.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/15.88a77cb7.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.d4d4eeb6.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -19,34 +20,51 @@
 
 
 
-<div id="isMain" class="loading"><header class="p-4 md:p-6 fixed bg-[#e9e9e1] w-full z-50"><nav class="flex justify-center">
-			<div class="self-center lg:ml-6"><a href="/" class="hover:text-emerald-600"><i class="fa-sharp fa-regular fa-house-heart"></i></a>
-				<a href="/why" class="hover:text-emerald-600 ml-4 uppercase tracking-wide">Our Why</a>
-				<a href="/alliance" class="hover:text-emerald-600 ml-4 uppercase tracking-wide">Our Alliance</a>
-				<a href="/portfolio" class="hover:text-emerald-600 ml-4 uppercase tracking-wide">Our Portfolio</a></div></nav></header>
+<div id="isMain" class="loading"><header class="px-4 py-2 md:px-6 fixed bg-[#e9e9e1] w-full z-50 shadow-sm"><nav class="flex lg:justify-center"><div class="self-center lg:ml-6 flex justify-between w-full lg:inline-block lg:w-auto menunav--hidden" id="menunav"><a href="/" class="hover:text-[#817c52] w-11 h-11 inline-block leading-[44px] text-center rounded-full bg-[#d6d6c2] lg:bg-[#e9e9e1]"><i class="fa-sharp fa-regular fa-house-heart text-lg"></i></a>
+			<div class="bg-[#e9e9e1] lg:inline-block menunav__target"><a href="/why" class="border-t border-[#d6d6c2] px-4 py-2 hover:text-[#817c52] uppercase tracking-wide lg:border-0">Our Why</a>
+				<a href="/alliance" class="border-t border-[#d6d6c2] px-4 py-2 hover:text-[#817c52] uppercase tracking-wide lg:border-0">Our Alliance</a>
+				<a href="/portfolio" class="border-t border-[#d6d6c2] px-4 py-2 hover:text-[#817c52] uppercase tracking-wide lg:border-0">Our Portfolio</a></div>
+			<button class="lg:hidden w-11 h-11 inline-block leading-[46px] text-center rounded-full bg-[#d6d6c2] float-right"><i class="fa-light fa-bars text-lg block mx-auto"></i>
+				<i class="fa-light fa-xmark text-lg block mx-auto"></i></button></div></nav></header>
 
-	<section class=""><article class="py-14 md:py-16 lg:py-24"><div class="px-4"><h1 class="md:text-center text-6xl md:text-7xl lg:text-9xl tracking-wide text-cyan-950 mt-9 mb-4 lg:mt-16 lg:mb-11">Shan <span class="italic text-[#fca806]">Luolin</span></h1>
-			<p class="md:text-center lg:text-xl text-slate-500 worksans uppercase tracking-wider">About Shan
-			</p>
+	<section class="content"><article class="pt-24 pb-9 lg:pb-16"><div class="px-4 max-w-4xl mx-auto worksans text-sm"><a href="/alliance#theteam"><i class="fa-light fa-arrow-left mr-2"></i>View the team</a></div>
 
-			<div class="max-w-4xl mx-auto md:text-center text-xl md:text-2xl lg:text-3xl"><p class="my-4 md:my-6 lg:my-9 leading-normal">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget nulla facilisi etiam dignissim diam quis. Accumsan lacus vel facilisis volutpat est velit egestas. Rhoncus dolor purus non enim praesent. Quis eleifend quam adipiscing vitae proin sagittis nisl rhoncus. Nibh sed pulvinar proin gravida hendrerit lectus a. Dui faucibus in ornare quam viverra orci. Ac felis donec et odio. Sagittis vitae et leo duis ut diam quam nulla porttitor. Non sodales neque sodales ut etiam sit amet. Vel pharetra vel turpis nunc eget lorem dolor sed viverra. Vel pharetra vel turpis nunc eget lorem dolor sed. Non blandit massa enim nec dui nunc mattis.</p></div></div></article>
+	<div class="md:mt-6 lg:mt-16 px-4 flex-col lg:flex-row flex gap-4 lg:gap-8 max-w-4xl mx-auto mb-6 lg:mb-10"><div class="w-24 h-24 mx-auto lg:w-1/3 lg:h-64 relative"><div class="w-full h-full absolute overflow-hidden rounded-md"><img src="/images/shan.jpg" alt="Shan Luolin" class="w-full h-full grayscale group-hover:grayscale-0 absolute top-0 right-0 left-0 bottom-0 object-cover"></div></div>
 
-	<article class="py-14 md:py-16 lg:py-24 bg-[#817c52] overflow-x-hidden"><div class="max-w-4xl mx-auto px-4"><h1 class="md:text-center text-4xl md:text-6xl lg:text-7xl tracking-wide text-white mb-4 lg:mb-11">Skills &amp; Expertise</h1>
-			<p class="md:text-center lg:text-xl text-slate-200 italic tracking-wide">Projects I have participated in
-			</p>
+	<div class="lg:w-2/3"><h1 class="text-center lg:text-left text-6xl md:text-7xl lg:text-9xl tracking-wide text-cyan-950">Shan <span class="italic text-[#fca806]">Luolin</span></h1></div></div>
 
-			<div class="flex gap-4 lg:gap-6 flex-wrap my-6 md:my-12 lg:my-16"><div class="p-4 md:p-6 bg-[#a59f78] w-full rounded-md"><h2 class="text-xl md:text-2xl mb-2">Project X</h2>
-					<p class="leading-normal">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget nulla facilisi etiam dignissim diam quis. Accumsan lacus vel facilisis volutpat est velit egestas. Rhoncus dolor purus non enim praesent. Quis eleifend quam adipiscing vitae proin sagittis nisl rhoncus. Nibh sed pulvinar proin gravida hendrerit lectus a. Dui faucibus in ornare quam viverra orci. Ac felis donec et odio. Sagittis vitae et leo duis ut diam quam nulla porttitor. Non sodales neque sodales ut etiam sit amet. Vel pharetra vel turpis nunc eget lorem dolor sed viverra.</p></div>
+	<div class="px-4 flex-col lg:flex-row flex gap-4 lg:gap-8 max-w-4xl mx-auto"><div class="w-full text-center lg:text-left lg:w-1/3 lg:h-64 relative"><div class="text-base worksans my-4 md:my-6 lg:my-9"><span class="mb-2 lg:mb-3 block text-slate-400"><i class="fa-light fa-location-dot fa-lg mr-2"></i> Amsterdam, Netherlands</span>
 
-				<div class="p-4 md:p-6 bg-[#a59f78] w-full rounded-md"><h2 class="text-xl md:text-2xl mb-2">Project Y</h2>
-					<p class="leading-normal">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget nulla facilisi etiam dignissim diam quis. Accumsan lacus vel facilisis volutpat est velit egestas. Rhoncus dolor purus non enim praesent. Quis eleifend quam adipiscing vitae proin sagittis nisl rhoncus. Nibh sed pulvinar proin gravida hendrerit lectus a. Dui faucibus in ornare quam viverra orci. Ac felis donec et odio. Sagittis vitae et leo duis ut diam quam nulla porttitor. Non sodales neque sodales ut etiam sit amet. Vel pharetra vel turpis nunc eget lorem dolor sed viverra.</p></div>
-			</div></div></article></section></div>
+		<ul><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="https://www.linkedin.com/in/shanluolin/" target="_blank"><i class="fa-light fa-link mr-2"></i> LinkedIn</a>
+				</li><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="https://www.wondersofu.com/" target="_blank"><i class="fa-light fa-link mr-2"></i> Wonders of U</a>
+				</li></ul></div></div>
+
+		<div class="lg:w-2/3 text-xl md:text-2xl"><div class="my-4 md:my-6 lg:my-9 leading-relaxed"><p class="mb-4 lg:mb-6">With over 12 years of experience guiding international projects, I offer extensive expertise in team and project management. With a decade of immersion in the food &amp; beverage industry, I bring a seasoned perspective that blends seamlessly with my engagement in EU projects and management.
+				</p>
+				<p class="mb-4 lg:mb-6">As a conscious entrepreneur, I focus on purposeful impact, driven by strengths in strategic thinking and simplifying complexity. My ability to comprehend the bigger picture and its complexities allows me to have a deeper understanding, and develop comprehensive solutions that bridge diverse situations.</p>
+				<p>My passion lies in extending understanding, supporting individuals through their personal and professional challenges. Through my experience in the wellbeing sector, I also bring an intuitive touch, infusing transformation with simplicity and clarity.</p></div>
+
+			<div class="mt-4 md:mt-6 lg:mt-9 pt-4 md:pt-6 lg:pt-9 border-t border-slate-200"><p class="text-base lg:text-lg text-slate-500 worksans uppercase tracking-wider">I can help you with
+	</p>
+	<div class="my-4 leading-relaxed italic text-slate-500 text-base"><p>Value proposition development, Validation of the offer, Go-to-Market and export strategies, Finance and investment readiness, Chosen market knowledge and network.
+				</p></div></div></div></div></article>
+
+<article class="py-14 md:py-16 lg:py-24 bg-[#817c52] overflow-x-hidden"><div class="max-w-4xl mx-auto px-4"><h1 class="text-center text-4xl md:text-6xl lg:text-7xl tracking-wide text-white mb-4 lg:mb-11">Skills &amp; Expertise
+		</h1>
+
+		<ul class="flex gap-4 flex-wrap my-6 md:my-12 lg:my-16 worksans justify-center"><li class="py-2 px-4 bg-[#a59f78] rounded-md">Speaks: Finnish, English, Mandarin
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Value proposition development
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Validation of the offer
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Go-to-Market and export strategies
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Finance and investment readiness
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Chosen market knowledge and network
+				</li></ul></div></article></section></div>
 
 
 			
 			<script>
 				{
-					__sveltekit_yfehx9 = {
+					__sveltekit_13byn0c = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -56,8 +74,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.4851fa39.js"),
-						import("../_app/immutable/entry/app.ead725d5.js")
+						import("../_app/immutable/entry/start.71529543.js"),
+						import("../_app/immutable/entry/app.d63fd9d9.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 15],
