--- a/alliance.html
+++ b/alliance.html
@@ -5,13 +5,13 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="./_app/immutable/assets/0.3c3450cd.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.71529543.js">
+		<link href="./_app/immutable/assets/0.a9622138.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.eadc6beb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.2ed5b141.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.c6520ec4.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.d63fd9d9.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.cebe3039.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.a76d069d.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.08b20048.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.58fa070e.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.363c6edd.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.9a322bcb.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -39,62 +39,75 @@
 
 		<div class="flex gap-4 lg:gap-6 flex-wrap my-6 md:my-12 lg:my-16"><a class="group block relative w-[calc(100%/2-8px)] lg:w-[calc(100%/3-16px)] rounded-lg overflow-hidden h-96 bg-[#a59f78] transition-all" href="/team/alvie"><div class="w-full after:block after:absolute after:w-full after:top-0 after:left-0 after:h-full after:bg-gradient-to-t after:from-[#a59f78]"><img src="/images/alvie.jpg" alt="Alvie Balayo" class="w-full h-full grayscale group-hover:grayscale-0 absolute top-0 right-0 left-0 bottom-0 object-cover"></div>
 	<div class="absolute bottom-0 w-full p-4 tracking-wide h-auto text-white"><span class="text-2xl font-bold italic">Alvie Balayo</span>
-		<span class="block text-base italic">Vision Navigator &amp; Consultant</span></div></a>
+		<span class="block text-base italic">Vision Navigator &amp; Consultant</span></div>
+	<div class="absolute top-4 right-4 w-11 h-11 rounded-full bg-[#817c52] text-center leading-[44px] opacity-0 group-hover:opacity-100 text-white shadow-md"><i class="fa-light fa-link text-lg"></i></div></a>
 
 			<a class="group block relative w-[calc(100%/2-8px)] lg:w-[calc(100%/3-16px)] rounded-lg overflow-hidden h-96 bg-[#a59f78] transition-all" href="/team/ivana"><div class="w-full after:block after:absolute after:w-full after:top-0 after:left-0 after:h-full after:bg-gradient-to-t after:from-[#a59f78]"><img src="/images/ivana.jpg" alt="Ivana Setiawan" class="w-full h-full grayscale group-hover:grayscale-0 absolute top-0 right-0 left-0 bottom-0 object-cover"></div>
 	<div class="absolute bottom-0 w-full p-4 tracking-wide h-auto text-white"><span class="text-2xl font-bold italic">Ivana Setiawan</span>
-		<span class="block text-base italic">Founder &amp; Software Engineer</span></div></a>
+		<span class="block text-base italic">Founder &amp; Software Engineer</span></div>
+	<div class="absolute top-4 right-4 w-11 h-11 rounded-full bg-[#817c52] text-center leading-[44px] opacity-0 group-hover:opacity-100 text-white shadow-md"><i class="fa-light fa-link text-lg"></i></div></a>
 
 			<a class="group block relative w-[calc(100%/2-8px)] lg:w-[calc(100%/3-16px)] rounded-lg overflow-hidden h-96 bg-[#a59f78] transition-all" href="/team/jana"><div class="w-full after:block after:absolute after:w-full after:top-0 after:left-0 after:h-full after:bg-gradient-to-t after:from-[#a59f78]"><img src="/images/jana.jpg" alt="Jana Sieling" class="w-full h-full grayscale group-hover:grayscale-0 absolute top-0 right-0 left-0 bottom-0 object-cover"></div>
 	<div class="absolute bottom-0 w-full p-4 tracking-wide h-auto text-white"><span class="text-2xl font-bold italic">Jana Sieling</span>
-		<span class="block text-base italic">Financial Consultant</span></div></a>
+		<span class="block text-base italic">Financial Consultant</span></div>
+	<div class="absolute top-4 right-4 w-11 h-11 rounded-full bg-[#817c52] text-center leading-[44px] opacity-0 group-hover:opacity-100 text-white shadow-md"><i class="fa-light fa-link text-lg"></i></div></a>
 
 			<a class="group block relative w-[calc(100%/2-8px)] lg:w-[calc(100%/3-16px)] rounded-lg overflow-hidden h-96 bg-[#a59f78] transition-all" href="/team/justyna"><div class="w-full after:block after:absolute after:w-full after:top-0 after:left-0 after:h-full after:bg-gradient-to-t after:from-[#a59f78]"><img src="/images/justyna.jpg" alt="Justyna Kawa" class="w-full h-full grayscale group-hover:grayscale-0 absolute top-0 right-0 left-0 bottom-0 object-cover"></div>
 	<div class="absolute bottom-0 w-full p-4 tracking-wide h-auto text-white"><span class="text-2xl font-bold italic">Justyna Kawa</span>
-		<span class="block text-base italic">Fashion Strategist &amp; Brand Creator</span></div></a>
+		<span class="block text-base italic">Fashion Strategist &amp; Brand Creator</span></div>
+	<div class="absolute top-4 right-4 w-11 h-11 rounded-full bg-[#817c52] text-center leading-[44px] opacity-0 group-hover:opacity-100 text-white shadow-md"><i class="fa-light fa-link text-lg"></i></div></a>
 
 			<a class="group block relative w-[calc(100%/2-8px)] lg:w-[calc(100%/3-16px)] rounded-lg overflow-hidden h-96 bg-[#a59f78] transition-all" href="/team/katarzyna"><div class="w-full after:block after:absolute after:w-full after:top-0 after:left-0 after:h-full after:bg-gradient-to-t after:from-[#a59f78]"><img src="/images/kasia.jpg" alt="Katarzyna Bazylczyk" class="w-full h-full grayscale group-hover:grayscale-0 absolute top-0 right-0 left-0 bottom-0 object-cover"></div>
 	<div class="absolute bottom-0 w-full p-4 tracking-wide h-auto text-white"><span class="text-2xl font-bold italic">Katarzyna Bazylczyk</span>
-		<span class="block text-base italic">Lead Product Designer</span></div></a>
+		<span class="block text-base italic">Lead Product Designer</span></div>
+	<div class="absolute top-4 right-4 w-11 h-11 rounded-full bg-[#817c52] text-center leading-[44px] opacity-0 group-hover:opacity-100 text-white shadow-md"><i class="fa-light fa-link text-lg"></i></div></a>
 
 			<a class="group block relative w-[calc(100%/2-8px)] lg:w-[calc(100%/3-16px)] rounded-lg overflow-hidden h-96 bg-[#a59f78] transition-all" href="/team/madelin"><div class="w-full after:block after:absolute after:w-full after:top-0 after:left-0 after:h-full after:bg-gradient-to-t after:from-[#a59f78]"><img src="/images/madelin.jpg" alt="Madelin Winkler" class="w-full h-full grayscale group-hover:grayscale-0 absolute top-0 right-0 left-0 bottom-0 object-cover"></div>
 	<div class="absolute bottom-0 w-full p-4 tracking-wide h-auto text-white"><span class="text-2xl font-bold italic">Madelin Winkler</span>
-		<span class="block text-base italic">Digital Nomad - SEO &amp; PR</span></div></a>
+		<span class="block text-base italic">Digital Nomad - SEO &amp; PR</span></div>
+	<div class="absolute top-4 right-4 w-11 h-11 rounded-full bg-[#817c52] text-center leading-[44px] opacity-0 group-hover:opacity-100 text-white shadow-md"><i class="fa-light fa-link text-lg"></i></div></a>
 
 			<a class="group block relative w-[calc(100%/2-8px)] lg:w-[calc(100%/3-16px)] rounded-lg overflow-hidden h-96 bg-[#a59f78] transition-all" href="/team/rita"><div class="w-full after:block after:absolute after:w-full after:top-0 after:left-0 after:h-full after:bg-gradient-to-t after:from-[#a59f78]"><img src="/images/rita.jpg" alt="Rita Januário" class="w-full h-full grayscale group-hover:grayscale-0 absolute top-0 right-0 left-0 bottom-0 object-cover"></div>
 	<div class="absolute bottom-0 w-full p-4 tracking-wide h-auto text-white"><span class="text-2xl font-bold italic">Rita Januário</span>
-		<span class="block text-base italic">Innovation Manager</span></div></a>
+		<span class="block text-base italic">Innovation Manager</span></div>
+	<div class="absolute top-4 right-4 w-11 h-11 rounded-full bg-[#817c52] text-center leading-[44px] opacity-0 group-hover:opacity-100 text-white shadow-md"><i class="fa-light fa-link text-lg"></i></div></a>
 
 			<a class="group block relative w-[calc(100%/2-8px)] lg:w-[calc(100%/3-16px)] rounded-lg overflow-hidden h-96 bg-[#a59f78] transition-all" href="/team/savvoula"><div class="w-full after:block after:absolute after:w-full after:top-0 after:left-0 after:h-full after:bg-gradient-to-t after:from-[#a59f78]"><img src="/images/savvoula.jpg" alt="Savvoula Oikonomou" class="w-full h-full grayscale group-hover:grayscale-0 absolute top-0 right-0 left-0 bottom-0 object-cover"></div>
 	<div class="absolute bottom-0 w-full p-4 tracking-wide h-auto text-white"><span class="text-2xl font-bold italic">Savvoula Oikonomou</span>
-		<span class="block text-base italic">Institutional Fundraising &amp; Consulting</span></div></a>
+		<span class="block text-base italic">Institutional Fundraising &amp; Consulting</span></div>
+	<div class="absolute top-4 right-4 w-11 h-11 rounded-full bg-[#817c52] text-center leading-[44px] opacity-0 group-hover:opacity-100 text-white shadow-md"><i class="fa-light fa-link text-lg"></i></div></a>
 
 			<a class="group block relative w-[calc(100%/2-8px)] lg:w-[calc(100%/3-16px)] rounded-lg overflow-hidden h-96 bg-[#a59f78] transition-all" href="/team/shan"><div class="w-full after:block after:absolute after:w-full after:top-0 after:left-0 after:h-full after:bg-gradient-to-t after:from-[#a59f78]"><img src="/images/shan.jpg" alt="Shan Luolin" class="w-full h-full grayscale group-hover:grayscale-0 absolute top-0 right-0 left-0 bottom-0 object-cover"></div>
 	<div class="absolute bottom-0 w-full p-4 tracking-wide h-auto text-white"><span class="text-2xl font-bold italic">Shan Luolin</span>
-		<span class="block text-base italic">Managing Director at East by North Oy</span></div></a>
+		<span class="block text-base italic">Managing Director at East by North Oy</span></div>
+	<div class="absolute top-4 right-4 w-11 h-11 rounded-full bg-[#817c52] text-center leading-[44px] opacity-0 group-hover:opacity-100 text-white shadow-md"><i class="fa-light fa-link text-lg"></i></div></a>
 
-			<a class="group block relative w-[calc(100%/2-8px)] lg:w-[calc(100%/3-16px)] rounded-lg overflow-hidden h-96 bg-[#a59f78] transition-all" href="/team/shweta"><div class="w-full after:block after:absolute after:w-full after:top-0 after:left-0 after:h-full after:bg-gradient-to-t after:from-[#a59f78]"><img src="/images/xyz.jpg" alt="Shweta Srivastav" class="w-full h-full grayscale group-hover:grayscale-0 absolute top-0 right-0 left-0 bottom-0 object-cover"></div>
+			<a class="group block relative w-[calc(100%/2-8px)] lg:w-[calc(100%/3-16px)] rounded-lg overflow-hidden h-96 bg-[#a59f78] transition-all" href="/team/shweta"><div class="w-full after:block after:absolute after:w-full after:top-0 after:left-0 after:h-full after:bg-gradient-to-t after:from-[#a59f78]"><img src="/images/shweta.jpg" alt="Shweta Srivastav" class="w-full h-full grayscale group-hover:grayscale-0 absolute top-0 right-0 left-0 bottom-0 object-cover"></div>
 	<div class="absolute bottom-0 w-full p-4 tracking-wide h-auto text-white"><span class="text-2xl font-bold italic">Shweta Srivastav</span>
-		<span class="block text-base italic">Design Research for regeneration</span></div></a>
+		<span class="block text-base italic">Design Research for regeneration</span></div>
+	<div class="absolute top-4 right-4 w-11 h-11 rounded-full bg-[#817c52] text-center leading-[44px] opacity-0 group-hover:opacity-100 text-white shadow-md"><i class="fa-light fa-link text-lg"></i></div></a>
 
 			<a class="group block relative w-[calc(100%/2-8px)] lg:w-[calc(100%/3-16px)] rounded-lg overflow-hidden h-96 bg-[#a59f78] transition-all" href="/team/valentina"><div class="w-full after:block after:absolute after:w-full after:top-0 after:left-0 after:h-full after:bg-gradient-to-t after:from-[#a59f78]"><img src="/images/valentina.jpg" alt="Valentina Dainelli" class="w-full h-full grayscale group-hover:grayscale-0 absolute top-0 right-0 left-0 bottom-0 object-cover"></div>
 	<div class="absolute bottom-0 w-full p-4 tracking-wide h-auto text-white"><span class="text-2xl font-bold italic">Valentina Dainelli</span>
-		<span class="block text-base italic">Social Media Specialist</span></div></a>
+		<span class="block text-base italic">Social Media Specialist</span></div>
+	<div class="absolute top-4 right-4 w-11 h-11 rounded-full bg-[#817c52] text-center leading-[44px] opacity-0 group-hover:opacity-100 text-white shadow-md"><i class="fa-light fa-link text-lg"></i></div></a>
 
 			<a class="group block relative w-[calc(100%/2-8px)] lg:w-[calc(100%/3-16px)] rounded-lg overflow-hidden h-96 bg-[#a59f78] transition-all" href="/team/raquel"><div class="w-full after:block after:absolute after:w-full after:top-0 after:left-0 after:h-full after:bg-gradient-to-t after:from-[#a59f78]"><img src="/images/xyz.jpg" alt="Raquel XYZ" class="w-full h-full grayscale group-hover:grayscale-0 absolute top-0 right-0 left-0 bottom-0 object-cover"></div>
 	<div class="absolute bottom-0 w-full p-4 tracking-wide h-auto text-white"><span class="text-2xl font-bold italic">Raquel XYZ</span>
-		<span class="block text-base italic">Sustainability &amp; Corporate Social Responsibility</span></div></a>
+		<span class="block text-base italic">Sustainability &amp; Corporate Social Responsibility</span></div>
+	<div class="absolute top-4 right-4 w-11 h-11 rounded-full bg-[#817c52] text-center leading-[44px] opacity-0 group-hover:opacity-100 text-white shadow-md"><i class="fa-light fa-link text-lg"></i></div></a>
 
 			<a class="group block relative w-[calc(100%/2-8px)] lg:w-[calc(100%/3-16px)] rounded-lg overflow-hidden h-96 bg-[#a59f78] transition-all" href="/team/zsuzsanna"><div class="w-full after:block after:absolute after:w-full after:top-0 after:left-0 after:h-full after:bg-gradient-to-t after:from-[#a59f78]"><img src="/images/zsuzsanna.jpg" alt="Zsuzsanna Zsidai" class="w-full h-full grayscale group-hover:grayscale-0 absolute top-0 right-0 left-0 bottom-0 object-cover"></div>
 	<div class="absolute bottom-0 w-full p-4 tracking-wide h-auto text-white"><span class="text-2xl font-bold italic">Zsuzsanna Zsidai</span>
-		<span class="block text-base italic">Founder of Womazing.eu</span></div></a>
+		<span class="block text-base italic">Founder of Womazing.eu</span></div>
+	<div class="absolute top-4 right-4 w-11 h-11 rounded-full bg-[#817c52] text-center leading-[44px] opacity-0 group-hover:opacity-100 text-white shadow-md"><i class="fa-light fa-link text-lg"></i></div></a>
 		</div></div></article></section></div>
 
 
 			
 			<script>
 				{
-					__sveltekit_13byn0c = {
+					__sveltekit_12um2d5 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -104,8 +117,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.71529543.js"),
-						import("./_app/immutable/entry/app.d63fd9d9.js")
+						import("./_app/immutable/entry/start.eadc6beb.js"),
+						import("./_app/immutable/entry/app.58fa070e.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
