--- a/team/shweta.html
+++ b/team/shweta.html
@@ -5,14 +5,14 @@
 		<link rel="icon" href="../favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="../_app/immutable/assets/0.3c3450cd.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.71529543.js">
+		<link href="../_app/immutable/assets/0.a9622138.css" rel="stylesheet">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.eadc6beb.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.2ed5b141.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.c6520ec4.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.d63fd9d9.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.cebe3039.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/16.8669a25f.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.d4d4eeb6.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.08b20048.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.58fa070e.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.363c6edd.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/16.348ace38.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.d04a396f.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -49,17 +49,18 @@
 <article class="py-14 md:py-16 lg:py-24 bg-[#817c52] overflow-x-hidden"><div class="max-w-4xl mx-auto px-4"><h1 class="text-center text-4xl md:text-6xl lg:text-7xl tracking-wide text-white mb-4 lg:mb-11">Skills &amp; Expertise
 		</h1>
 
-		<ul class="flex gap-4 flex-wrap my-6 md:my-12 lg:my-16 worksans justify-center"><li class="py-2 px-4 bg-[#a59f78] rounded-md">Speaks: English, Hindi
+		<ul class="flex gap-4 flex-wrap mt-6 md:mt-12 lg:mt-16 worksans justify-center"><li class="py-2 px-4 bg-[#a59f78] rounded-md">Speaks: English, Hindi
 				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Sustainability and Corporate Social Responsibility
 				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Systems and design thinking for organisations
 				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Capacity building for leading in uncertainty
-				</li></ul></div></article></section></div>
+				</li></ul>
+		<div class="worksans text-sm text-center mt-6 md:mt-12 lg:mt-16"><a href="/alliance#theteam" class="block !text-white worksans"><i class="fa-light fa-arrow-left mr-2"></i>View the team</a></div></div></article></section></div>
 
 
 			
 			<script>
 				{
-					__sveltekit_13byn0c = {
+					__sveltekit_12um2d5 = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -69,8 +70,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.71529543.js"),
-						import("../_app/immutable/entry/app.d63fd9d9.js")
+						import("../_app/immutable/entry/start.eadc6beb.js"),
+						import("../_app/immutable/entry/app.58fa070e.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 16],
