--- a/why.html
+++ b/why.html
@@ -5,12 +5,12 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="./_app/immutable/assets/0.3c3450cd.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.71529543.js">
+		<link href="./_app/immutable/assets/0.a9622138.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.eadc6beb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.2ed5b141.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.c6520ec4.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.d63fd9d9.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.cebe3039.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.08b20048.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.58fa070e.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.363c6edd.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/19.f6dca9a3.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -33,7 +33,7 @@
 			
 			<script>
 				{
-					__sveltekit_13byn0c = {
+					__sveltekit_12um2d5 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -43,8 +43,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.71529543.js"),
-						import("./_app/immutable/entry/app.d63fd9d9.js")
+						import("./_app/immutable/entry/start.eadc6beb.js"),
+						import("./_app/immutable/entry/app.58fa070e.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 19],
